--- a/BOTTGIngSoft2021.Repo/BOTTGIngSoft2021.Repo.csproj
+++ b/BOTTGIngSoft2021.Repo/BOTTGIngSoft2021.Repo.csproj
@@ -4,9 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
+    <ProjectReference Include="..\BOTTGIngSoft2021.Data\BOTTGIngSoft2021.Data.csproj" />
   </ItemGroup>
 
 </Project>
